// This is your Prisma schema file,
// learn more about it in the docs: https://pris.ly/d/prisma-schema

generator client {
  provider        = "prisma-client-js"
  previewFeatures = ["postgresqlExtensions"]
}

datasource db {
  provider   = "postgresql"
  url        = env("DATABASE_URL")
  directUrl  = env("DIRECT_URL")
  extensions = [vector]
}

enum UserRole {
  USER
  ADMIN
}

model User {
  id                   String             @id @default(uuid())
  email                String             @unique
  passwordHash         String
  role                 UserRole           @default(USER)
  isVerified           Boolean            @default(false)
  verificationToken    String?
  resetPasswordToken   String?
  createdAt            DateTime           @default(now())
  updatedAt            DateTime           @updatedAt
  
  profile              Profile?
  preferences          TravelPreferences?
  trips                Trip[]             @relation("UserTrips")
  posts                Post[]
  comments             Comment[]
  likes                Like[]
  bookmarks            Bookmark[]
  checkIns             CheckIn[]
  notifications        Notification[]
  aiHistories          AIHistory[]
  liveLocation         Location?          @relation("UserLiveLocation")
  chatbotConversations ChatConversation[]
  aiMemory             AIMemory?
  itineraries          Itinerary[]
  userRecommendations  UserRecommendation[]
  travelHistories      TravelHistory[]
  favoriteFoods        FavoriteFood[]
  savedPlaces          SavedPlace[]
  aiFeedbacks          AIFeedback[]
  
  // Self-referencing many-to-many for followers
  followers            Follower[]         @relation("Following")
  following            Follower[]         @relation("Follower")
  
  // Chat relationships
  conversations        Conversation[]     @relation("ConversationParticipants")
  messages             Message[]

  // New model relationships
  journeys             Journey[]
  locationHistory      LocationHistory[]
  organizedEvents      Event[]            @relation("EventOrganizer")
  eventAttendances     EventAttendee[]
  travelerMatchesUser  TravelerMatch[]    @relation("TravelerMatchUser")
  travelerMatchesTarget TravelerMatch[]   @relation("TravelerMatchTarget")

  @@index([email])
}

model Profile {
  id           String   @id @default(uuid())
  userId       String   @unique
  fullName     String
  avatarUrl    String?
  coverUrl     String?
  bio          String?
  phoneNumber  String?
  homeLocation String?
  user         User     @relation(fields: [userId], references: [id], onDelete: Cascade)
}

model TravelPreferences {
  id               String   @id @default(uuid())
  userId           String   @unique
  preferredPace    String   // "slow", "moderate", "fast"
  dailyBudget      Float
  activities       String[] // e.g. ["nature", "culture", "food"]
  destinationTypes String[] // e.g. ["beach", "mountain", "city"]
  foodPreferences  String[] // e.g. ["streetfood", "vegetarian", "fine-dining"]
  user             User     @relation(fields: [userId], references: [id], onDelete: Cascade)
}

model Trip {
  id              String           @id @default(uuid())
  ownerId         String
  title           String
  description     String?
  destinationName String
  startDate       DateTime
  endDate         DateTime
  totalBudget     Float
  travelStyle     String           // "solo", "family", "friends", "couple"
  isPublic        Boolean          @default(false)
  cloneSourceId   String?
  createdAt       DateTime         @default(now())
  updatedAt       DateTime         @updatedAt
  
  owner           User             @relation("UserTrips", fields: [ownerId], references: [id], onDelete: Cascade)
  cloneSource     Trip?            @relation("ClonedTrips", fields: [cloneSourceId], references: [id])
  clonedTrips     Trip[]           @relation("ClonedTrips")
  days            TripDay[]
  posts           Post[]
  recommendations Recommendation[]

  @@index([ownerId])
  @@index([cloneSourceId])
}

model TripDay {
  id         String         @id @default(uuid())
  tripId     String
  dayIndex   Int
  date       DateTime
  trip       Trip           @relation(fields: [tripId], references: [id], onDelete: Cascade)
  activities TripActivity[]

  @@unique([tripId, dayIndex])
}

model TripActivity {
  id            String      @id @default(uuid())
  tripDayId     String
  destinationId String
  startTime     String      // HH:MM format
  endTime       String      // HH:MM format
  estimatedCost Float       @default(0.0)
  sequenceOrder Int
  notes         String?
  tripDay       TripDay     @relation(fields: [tripDayId], references: [id], onDelete: Cascade)
  destination   Destination @relation(fields: [destinationId], references: [id])

  @@index([tripDayId])
  @@index([destinationId])
}

model Destination {
  id            String         @id @default(uuid())
  name          String
  description   String?
  latitude      Float          // For Leaflet plotting
  longitude     Float          // For Leaflet plotting
  category      String         // "restaurant", "hotel", "attraction"
  averageRating Float          @default(0.0)
  address       String?
  openingHours  String?
  activities    TripActivity[]
  checkIns      CheckIn[]
  recommendations Recommendation[]
  events        Event[]

  // Compound index to speed up spatial bounding box searches
  @@index([latitude, longitude])
}

model Post {
  id         String     @id @default(uuid())
  authorId   String
  content    String
  mediaUrls  String[]
  tripId     String?
  locationId String?
  createdAt  DateTime   @default(now())
  deletedAt  DateTime?
  
  author     User       @relation(fields: [authorId], references: [id], onDelete: Cascade)
  trip       Trip?      @relation(fields: [tripId], references: [id], onDelete: SetNull)
  comments   Comment[]
  likes      Like[]
  bookmarks  Bookmark[]

  @@index([authorId])
  @@index([tripId])
}

model Comment {
  id        String   @id @default(uuid())
  postId    String
  authorId  String
  content   String
  parentId  String?
  createdAt DateTime @default(now())
  
  post      Post     @relation(fields: [postId], references: [id], onDelete: Cascade)
  author    User     @relation(fields: [authorId], references: [id], onDelete: Cascade)
  parent    Comment? @relation("CommentReplies", fields: [parentId], references: [id], onDelete: Cascade)
  replies   Comment[] @relation("CommentReplies")

  @@index([postId])
  @@index([authorId])
  @@index([parentId])
}

model Like {
  id        String   @id @default(uuid())
  postId    String
  userId    String
  createdAt DateTime @default(now())
  
  post      Post     @relation(fields: [postId], references: [id], onDelete: Cascade)
  user      User     @relation(fields: [userId], references: [id], onDelete: Cascade)

  @@unique([postId, userId])
}

model Bookmark {
  id        String   @id @default(uuid())
  postId    String
  userId    String
  createdAt DateTime @default(now())
  
  post      Post     @relation(fields: [postId], references: [id], onDelete: Cascade)
  user      User     @relation(fields: [userId], references: [id], onDelete: Cascade)

  @@unique([postId, userId])
}

model Follower {
  id          String   @id @default(uuid())
  followerId  String
  followingId String
  createdAt   DateTime @default(now())
  
  follower    User     @relation("Follower", fields: [followerId], references: [id], onDelete: Cascade)
  following   User     @relation("Following", fields: [followingId], references: [id], onDelete: Cascade)

  @@unique([followerId, followingId])
}

model Message {
  id             String       @id @default(uuid())
  conversationId String
  senderId       String
  content        String
  createdAt      DateTime     @default(now())
  
  conversation   Conversation @relation(fields: [conversationId], references: [id], onDelete: Cascade)
  sender         User         @relation(fields: [senderId], references: [id], onDelete: Cascade)

  @@index([conversationId])
}

model Conversation {
  id           String    @id @default(uuid())
  createdAt    DateTime  @default(now())
  updatedAt    DateTime  @updatedAt
  
  participants User[]    @relation("ConversationParticipants")
  messages     Message[]
}

model Notification {
  id          String   @id @default(uuid())
  recipientId String
  type        String   // "like", "comment", "friend_request", "invitation"
  content     String
  isRead      Boolean  @default(false)
  createdAt   DateTime @default(now())
  
  recipient   User     @relation(fields: [recipientId], references: [id], onDelete: Cascade)

  @@index([recipientId])
}

model CheckIn {
  id            String      @id @default(uuid())
  userId        String
  destinationId String
  note          String?
  createdAt     DateTime    @default(now())
  
  user          User        @relation(fields: [userId], references: [id], onDelete: Cascade)
  destination   Destination @relation(fields: [destinationId], references: [id], onDelete: Cascade)

  @@index([userId])
  @@index([destinationId])
}

model Location {
  id        String   @id @default(uuid())
  userId    String   @unique
  latitude  Float
  longitude Float
  updatedAt DateTime @updatedAt
  
  user      User     @relation("UserLiveLocation", fields: [userId], references: [id], onDelete: Cascade)
}

model Recommendation {
  id                   String      @id @default(uuid())
  tripId               String
  destinationId        String
  score                Float       // Recommendation confidence/relevance score [0..1]
  recommendationReason String?
  
  trip                 Trip        @relation(fields: [tripId], references: [id], onDelete: Cascade)
  destination          Destination @relation(fields: [destinationId], references: [id], onDelete: Cascade)

  @@index([tripId])
}

model AIHistory {
  id           String   @id @default(uuid())
  userId       String
  promptText   String
  responseJson String
  type         String   // "itinerary", "cost_prediction", "route_optimization"
  createdAt    DateTime @default(now())
  
  user         User     @relation(fields: [userId], references: [id], onDelete: Cascade)

  @@index([userId])
}

// ═══════════════════════════════════════════════════════════
// JOURNEY — A travel story / blog-style trip journal
// ═══════════════════════════════════════════════════════════
model Journey {
  id            String         @id @default(uuid())
  userId        String
  title         String
  description   String?
  coverImageUrl String?
  isPublic      Boolean        @default(true)
  status        String         @default("draft") // "draft", "active", "completed"
  startDate     DateTime?
  endDate       DateTime?
  totalDistance  Float          @default(0)
  createdAt     DateTime       @default(now())
  updatedAt     DateTime       @updatedAt

  user          User           @relation(fields: [userId], references: [id], onDelete: Cascade)
  routes        Route[]

  @@index([userId])
  @@index([status])
}

// ═══════════════════════════════════════════════════════════
// ROUTE — A specific route/path within a Journey
// ═══════════════════════════════════════════════════════════
model Route {
  id            String       @id @default(uuid())
  journeyId     String
  name          String
  description   String?
  transportMode String       @default("walking") // "walking", "driving", "cycling", "transit"
  distanceKm    Float        @default(0)
  durationMin   Int          @default(0)
  color         String       @default("#D4A843") // hex color for map polyline
  createdAt     DateTime     @default(now())

  journey       Journey      @relation(fields: [journeyId], references: [id], onDelete: Cascade)
  points        RoutePoint[]

  @@index([journeyId])
}

// ═══════════════════════════════════════════════════════════
// ROUTE POINT — Individual GPS waypoint on a Route
// ═══════════════════════════════════════════════════════════
model RoutePoint {
  id            String   @id @default(uuid())
  routeId       String
  latitude      Float
  longitude     Float
  altitude      Float?
  sequenceOrder Int
  timestamp     DateTime @default(now())
  note          String?
  photoUrl      String?

  route         Route    @relation(fields: [routeId], references: [id], onDelete: Cascade)

  @@index([routeId])
  @@index([latitude, longitude])
}

// ═══════════════════════════════════════════════════════════
// LOCATION HISTORY — Historical GPS breadcrumbs for a user
// ═══════════════════════════════════════════════════════════
model LocationHistory {
  id        String   @id @default(uuid())
  userId    String
  latitude  Float
  longitude Float
  accuracy  Float?   // GPS accuracy in meters
  speed     Float?   // m/s
  heading   Float?   // degrees
  createdAt DateTime @default(now())

  user      User     @relation(fields: [userId], references: [id], onDelete: Cascade)

  @@index([userId])
  @@index([createdAt])
  @@index([latitude, longitude])
}

// ═══════════════════════════════════════════════════════════
// EVENT — Local events, festivals, meetups at destinations
// ═══════════════════════════════════════════════════════════
model Event {
  id            String      @id @default(uuid())
  title         String
  description   String?
  coverImageUrl String?
  destinationId String?
  latitude      Float
  longitude     Float
  startDate     DateTime
  endDate       DateTime?
  category      String      // "festival", "meetup", "tour", "workshop", "cultural"
  maxAttendees  Int?
  currentCount  Int         @default(0)
  organizerId   String
  isPublic      Boolean     @default(true)
  createdAt     DateTime    @default(now())
  updatedAt     DateTime    @updatedAt

  destination   Destination? @relation(fields: [destinationId], references: [id], onDelete: SetNull)
  organizer     User         @relation("EventOrganizer", fields: [organizerId], references: [id], onDelete: Cascade)
  attendees     EventAttendee[]

  @@index([latitude, longitude])
  @@index([startDate])
  @@index([category])
  @@index([organizerId])
}

model EventAttendee {
  id        String   @id @default(uuid())
  eventId   String
  userId    String
  status    String   @default("going") // "going", "interested", "maybe"
  createdAt DateTime @default(now())

  event     Event    @relation(fields: [eventId], references: [id], onDelete: Cascade)
  user      User     @relation(fields: [userId], references: [id], onDelete: Cascade)

  @@unique([eventId, userId])
}

// ═══════════════════════════════════════════════════════════
// TRAVELER MATCH — AI-based traveler compatibility matching
// ═══════════════════════════════════════════════════════════
model TravelerMatch {
  id              String   @id @default(uuid())
  userId          String
  matchedUserId   String
  compatScore     Float    // 0.0 - 1.0 similarity score
  matchReasons    String[] // ["similar_interests", "same_destination", "overlap_dates"]
  status          String   @default("suggested") // "suggested", "accepted", "declined"
  createdAt       DateTime @default(now())
  updatedAt       DateTime @updatedAt

  user            User     @relation("TravelerMatchUser", fields: [userId], references: [id], onDelete: Cascade)
  matchedUser     User     @relation("TravelerMatchTarget", fields: [matchedUserId], references: [id], onDelete: Cascade)

  @@unique([userId, matchedUserId])
  @@index([userId])
  @@index([matchedUserId])
  @@index([compatScore])
}

model ChatConversation {
  id        String        @id @default(uuid())
  userId    String
  title     String?       @default("New Conversation")
  createdAt DateTime      @default(now())
  updatedAt DateTime      @updatedAt
  user      User          @relation(fields: [userId], references: [id], onDelete: Cascade)
  messages  ChatMessage[]

  @@index([userId])
}

model ChatMessage {
  id             String               @id @default(uuid())
  conversationId String
  role           String               // "user", "assistant", "system"
  createdAt      DateTime             @default(now())
  updatedAt      DateTime             @updatedAt
  conversation   ChatConversation     @relation(fields: [conversationId], references: [id], onDelete: Cascade)
  versions       ChatMessageVersion[]
  feedback       AIFeedback?
  toolCalls      ToolCall[]

  @@index([conversationId])
}

model ChatMessageVersion {
  id        String      @id @default(uuid())
  messageId String
  content   String
  version   Int         // 1, 2, 3, etc.
  isActive  Boolean     @default(true)
  createdAt DateTime    @default(now())
  message   ChatMessage @relation(fields: [messageId], references: [id], onDelete: Cascade)

  @@index([messageId])
}

model AIMemory {
  id                String   @id @default(uuid())
  userId            String   @unique
  travelPreferences String[] // sở thích du lịch (e.g. "phượt", "nghỉ dưỡng")
  favoriteFoods     String[] // món ăn yêu thích
  budget            String?  // ngân sách (e.g. "thấp", "trung bình", "cao")
  transportation    String[] // phương tiện di chuyển (e.g. "xe máy", "máy bay")
  favoriteLocations String[] // địa điểm yêu thích
  createdAt         DateTime @default(now())
  updatedAt         DateTime @updatedAt
  user              User     @relation(fields: [userId], references: [id], onDelete: Cascade)
}

model Itinerary {
  id          String         @id @default(uuid())
  userId      String
  title       String
  description String?
  createdAt   DateTime       @default(now())
  updatedAt   DateTime       @updatedAt
  user        User           @relation(fields: [userId], references: [id], onDelete: Cascade)
  days        ItineraryDay[]

  @@index([userId])
}

model ItineraryDay {
  id          String              @id @default(uuid())
  itineraryId String
  dayIndex    Int                 // Day 1, Day 2, etc.
  date        DateTime?
  itinerary   Itinerary           @relation(fields: [itineraryId], references: [id], onDelete: Cascade)
  activities  ItineraryActivity[]

  @@index([itineraryId])
}

model ItineraryActivity {
  id             String       @id @default(uuid())
  itineraryDayId String
  title          String
  description    String?
  startTime      String?      // e.g., "09:00"
  endTime        String?      // e.g., "11:00"
  location       String?
  cost           Float?       @default(0.0)
  day            ItineraryDay @relation(fields: [itineraryDayId], references: [id], onDelete: Cascade)

  @@index([itineraryDayId])
}

model UserRecommendation {
  id        String   @id @default(uuid())
  userId    String
  location  String   // địa điểm đề xuất
  priority  String   // độ ưu tiên (e.g., "high", "medium", "low")
  reason    String?  // lý do gợi ý
  type      String   // loại gợi ý (e.g., "destination", "food", "activity")
  createdAt DateTime @default(now())
  updatedAt DateTime @updatedAt
  user      User     @relation(fields: [userId], references: [id], onDelete: Cascade)

  @@index([userId])
}

model TravelHistory {
  id        String   @id @default(uuid())
  userId    String
  location  String   // địa điểm đã đi
  time      DateTime // thời gian
  rating    String?  // đánh giá
  cost      Float    @default(0.0) // chi phí
  createdAt DateTime @default(now())
  updatedAt DateTime @updatedAt
  user      User     @relation(fields: [userId], references: [id], onDelete: Cascade)

  @@index([userId])
}

model FavoriteFood {
  id          String   @id @default(uuid())
  userId      String
  name        String   // tên món ăn
  region      String?  // khu vực (ví dụ: Miền Bắc, Hà Nội, v.v.)
  description String?  // mô tả
  rating      Float?   // điểm đánh giá (0 - 5)
  createdAt   DateTime @default(now())
  updatedAt   DateTime @updatedAt
  user        User     @relation(fields: [userId], references: [id], onDelete: Cascade)

  @@index([userId])
}

model SavedPlace {
  id        String   @id @default(uuid())
  userId    String
  name      String   // tên địa điểm
  category  String   // loại địa điểm (e.g. restaurant, hotel, attraction)
  latitude  Float    // vĩ độ (để vẽ bản đồ)
  longitude Float    // kinh độ (để vẽ bản đồ)
  address   String?  // địa chỉ
  imageUrl  String?  // hình ảnh đại diện hoặc hình ảnh địa điểm
  createdAt DateTime @default(now())
  updatedAt DateTime @updatedAt
  user      User     @relation(fields: [userId], references: [id], onDelete: Cascade)

  @@index([userId])
}

model AIFeedback {
  id        String      @id @default(uuid())
  userId    String
  messageId String      @unique // 1-1 relationship: mỗi tin nhắn AI chỉ có tối đa 1 feedback
  rating    Int         // điểm đánh giá (e.g. 1-5 hoặc 1: thumbs up, -1: thumbs down)
  comment   String?     // ý kiến đóng góp
  createdAt DateTime    @default(now())
  updatedAt DateTime    @updatedAt
  user      User        @relation(fields: [userId], references: [id], onDelete: Cascade)
  message   ChatMessage @relation(fields: [messageId], references: [id], onDelete: Cascade)

  @@index([userId])
  @@index([messageId])
}

model ToolCall {
  id        String      @id @default(uuid())
  messageId String
  toolName  String      // tên tool AI đã dùng (e.g. Maps, Weather, v.v.)
  input     String      // thông tin đầu vào gửi tới tool
  output    String?     // kết quả phản hồi từ tool
  status    String      // trạng thái chạy tool (e.g. "success", "failed")
  createdAt DateTime    @default(now())
  message   ChatMessage @relation(fields: [messageId], references: [id], onDelete: Cascade)

  @@index([messageId])
}

model PlaceCache {
  key       String   @id // khóa tìm kiếm cache (ví dụ: "lat_lng:21.02_105.85" hoặc "query:ha-noi")
  value     String   // dữ liệu JSON của địa điểm được cache
  expiresAt DateTime // thời gian hết hạn
  createdAt DateTime @default(now())
  updatedAt DateTime @updatedAt
}

model FoodCache {
  key       String   @id // khóa tìm kiếm cache (ví dụ: "query:pho-bo" hoặc "region:ha-noi")
  value     String   // dữ liệu JSON của món ăn được cache
  expiresAt DateTime // thời gian hết hạn
  createdAt DateTime @default(now())
  updatedAt DateTime @updatedAt
}

model BlogCache {
  key       String   @id // khóa tìm kiếm cache (ví dụ: "topic:du-lich-ha-giang")
  value     String   // dữ liệu JSON của blog được cache
  expiresAt DateTime // thời gian hết hạn
  createdAt DateTime @default(now())
  updatedAt DateTime @updatedAt
}

model KnowledgeContent {
  id        String              @id @default(uuid())
  title     String
  body      String              // nội dung văn bản tri thức gốc (1 content)
  category  String              // loại tri thức (e.g. culture, festival, food, history, destination)
  questions KnowledgeQuestion[]
  answers   KnowledgeAnswer[]
  createdAt DateTime            @default(now())
  updatedAt DateTime            @updatedAt

  @@index([category])
}

model KnowledgeQuestion {
  id              String                       @id @default(uuid())
  contentId       String
  questionText    String                       // nội dung câu hỏi mẫu (nhiều question)
  embeddingOpenAI Unsupported("vector(1536)")? // Lưu trữ vector embedding OpenAI
  embeddingLocal  Unsupported("vector(128)")?  // Lưu trữ vector embedding Local
  createdAt       DateTime                     @default(now())
  updatedAt       DateTime                     @updatedAt

  content         KnowledgeContent             @relation(fields: [contentId], references: [id], onDelete: Cascade)

  @@index([contentId])
}

model KnowledgeAnswer {
  id         String           @id @default(uuid())
  contentId  String
  answerText String           // nội dung đáp án mẫu (nhiều đáp án)
  createdAt  DateTime         @default(now())
  updatedAt  DateTime         @updatedAt

  content    KnowledgeContent @relation(fields: [contentId], references: [id], onDelete: Cascade)

  @@index([contentId])
}

model SafetyWarning {
  id          String    @id @default(uuid())
  type        String    // "FLOOD", "LANDSLIDE", "CLOSED_ROAD", "STORM"
  description String
  latitude    Float
  longitude   Float
  radiusKm    Float     @default(1.0)
  createdAt   DateTime  @default(now())
  expiresAt   DateTime?

  @@index([latitude, longitude])
}


