@startuml
!startsub REVIEW
entity Post {
  * id : String <<PK>>
  --
  * authorId : String <<FK>> <<index>>
  * content : String
  * mediaUrls : String[]
  tripId : String <<FK>> <<index>> <<nullable>>
  locationId : String <<nullable>>
  * createdAt : DateTime
  deletedAt : DateTime <<nullable>>
}

entity Comment {
  * id : String <<PK>>
  --
  * postId : String <<FK>> <<index>>
  * authorId : String <<FK>> <<index>>
  * content : String
  parentId : String <<FK>> <<index>> <<nullable>>
  * createdAt : DateTime
}

entity Like {
  * id : String <<PK>>
  --
  * postId : String <<FK>> <<unique: postId, userId>>
  * userId : String <<FK>> <<unique: postId, userId>>
  * createdAt : DateTime
}

entity Bookmark {
  * id : String <<PK>>
  --
  * postId : String <<FK>> <<unique: postId, userId>>
  * userId : String <<FK>> <<unique: postId, userId>>
  * createdAt : DateTime
}

entity AIFeedback {
  * id : String <<PK>>
  --
  * userId : String <<FK>> <<index>>
  * messageId : String <<FK>> <<unique>> <<index>>
  * rating : Int
  comment : String <<nullable>>
  * createdAt : DateTime
  * updatedAt : DateTime
}

Post ||--o{ Comment : "has comments"
Post ||--o{ Like : "receives likes"
Post ||--o{ Bookmark : "receives bookmarks"
Comment |o--o| Comment : "reply parent comment"
User ||--o{ Post : "authors posts"
User ||--o{ Comment : "writes comments"
User ||--o{ Like : "likes posts"
User ||--o{ Bookmark : "bookmarks posts"
User ||--o{ AIFeedback : "submits chatbot feedbacks"
ChatMessage ||--o| AIFeedback : "receives message feedback"
!endsub

!startsub REVIEW_OVERVIEW
entity Post {
  * id : String <<PK>>
  --
  * authorId : String <<FK>>
  * content : String
  * createdAt : DateTime
}

entity Comment {
  * id : String <<PK>>
  --
  * postId : String <<FK>>
  * authorId : String <<FK>>
  * content : String
}

Post ||--o{ Comment : "has comments"
User ||--o{ Post : "authors posts"
User ||--o{ Comment : "writes comments"
!endsub
@enduml
